Sorgente/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Agente_correlato_Aurora__c</fullName>
        <label>Agente correlato Aurora</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annulla_l_iscrizione__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Annulla l&apos;iscrizione</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aurora__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aurora</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SG</fullName>
                </value>
                <value>
                    <fullName>SS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Categoria_lead__c</fullName>
        <label>Categoria lead</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Codice_fiscale__c</fullName>
        <label>Codice fiscale</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Convertito__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Convertito</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_e_ora_creazione__c</fullName>
        <defaultValue>DATETIMEVALUE(    $Profile.CreatedDate  )</defaultValue>
        <label>Data e ora creazione</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_ora_ricontatto__c</fullName>
        <label>Data/ora ricontatto</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_presunta_parto__c</fullName>
        <label>Data presunta parto</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_visita__c</fullName>
        <label>Data visita</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dettaglio_origine_sconosciuto__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Dettaglio origine sconosciuto</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dettaglio_specialista_Aurora__c</fullName>
        <label>Dettaglio specialista Aurora</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_secondaria__c</fullName>
        <label>Email secondaria</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fascia_Oraria__c</fullName>
        <label>Fascia Oraria</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <label>Form</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ricontatto</fullName>
                </value>
                <value>
                    <fullName>Ric. Guida i-G</fullName>
                </value>
                <value>
                    <fullName>Ric. Guida i-M</fullName>
                </value>
                <value>
                    <fullName>P.a.</fullName>
                </value>
                <value>
                    <fullName>Ric. guida B-V</fullName>
                </value>
                <value>
                    <fullName>Ricontatto guida B-V</fullName>
                </value>
                <value>
                    <fullName>Ric. guida CPP</fullName>
                </value>
                <value>
                    <fullName>Ric. guida i-O</fullName>
                </value>
                <value>
                    <fullName>Ric. info</fullName>
                </value>
                <value>
                    <fullName>Ric. guida i-C</fullName>
                </value>
                <value>
                    <fullName>Ric. guida i-CG</fullName>
                </value>
                <value>
                    <fullName>Csco-bc</fullName>
                </value>
                <value>
                    <fullName>Csco-br</fullName>
                </value>
                <value>
                    <fullName>Cpp-h</fullName>
                </value>
                <value>
                    <fullName>Cpp-p</fullName>
                </value>
                <value>
                    <fullName>Cpp-dx</fullName>
                </value>
                <value>
                    <fullName>Csco-p</fullName>
                </value>
                <value>
                    <fullName>Ric. guida i-Mand</fullName>
                </value>
                <value>
                    <fullName>Landing</fullName>
                </value>
                <value>
                    <fullName>Sito mobile</fullName>
                </value>
                <value>
                    <fullName>Richiesta guida</fullName>
                </value>
                <value>
                    <fullName>Contatto</fullName>
                </value>
                <value>
                    <fullName>Richiesta visita banca</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nome_Numero_citofono__c</fullName>
        <label>Citofono</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Numero_civico__c</fullName>
        <label>Numero civico</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Origine__c</fullName>
        <label>Origine</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Altro</fullName>
                </value>
                <value>
                    <fullName>Amici/conoscenti</fullName>
                </value>
                <value>
                    <fullName>Collaboratore</fullName>
                </value>
                <value>
                    <fullName>Corso Preparto</fullName>
                </value>
                <value>
                    <fullName>cross_selling_aurora</fullName>
                    <label>Cross selling - Aurora</label>
                </value>
                <value>
                    <fullName>Da verificare</fullName>
                </value>
                <value>
                    <fullName>Fiera</fullName>
                </value>
                <value>
                    <fullName>Già cliente</fullName>
                </value>
                <value>
                    <fullName>Giornali/riviste</fullName>
                </value>
                <value>
                    <fullName>KAM</fullName>
                </value>
                <value>
                    <fullName>Motore di ricerca</fullName>
                </value>
                <value>
                    <fullName>Pieghevole</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Programma Amico</fullName>
                </value>
                <value>
                    <fullName>Siti e app satellite</fullName>
                </value>
                <value>
                    <fullName>Siti extra gruppo</fullName>
                </value>
                <value>
                    <fullName>Social media</fullName>
                </value>
                <value>
                    <fullName>Specialista</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OwnerId_del_del__c</fullName>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partita_IVA__c</fullName>
        <label>Partita IVA</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Privacy 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Privacy_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Privacy 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Privacy_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Privacy 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Programma_amico__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referente programma amico</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Programma Amico</relationshipLabel>
        <relationshipName>Referente_programma_amico</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Richiesta_guida__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Richiesta guida cartacea</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Richiesta_guida_telematica__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inviata informativa telematica (SF)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Richiesta_informativa_telematica_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Richiesta informativa telematica (Form)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sottocategoria_origine__c</fullName>
        <label>Sottocategoria origine</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Origine__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>CSCO</fullName>
                </value>
                <value>
                    <fullName>Ok Corso Preparto</fullName>
                </value>
                <value>
                    <fullName>CCS</fullName>
                </value>
                <value>
                    <fullName>Diagnosi prenatale</fullName>
                </value>
                <value>
                    <fullName>BRCA</fullName>
                </value>
                <value>
                    <fullName>Baby&apos;s Voice</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>Instagram</fullName>
                </value>
                <value>
                    <fullName>Bimbinfiera</fullName>
                </value>
                <value>
                    <fullName>i-Mamma</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visita_banca__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visita banca</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeadsForms</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>Form__c</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>Tutti i lead aperti</label>
    </listViews>
    <listViews>
        <fullName>I_miei_lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.LAST_NAME</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Data_presunta_parto__c</columns>
        <columns>LEAD.MOBILE_PHONE</columns>
        <filterScope>Mine</filterScope>
        <label>I miei lead</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Lead_Lazio</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Origine__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATE_CODE</field>
            <operation>equals</operation>
            <value>FR,LT,RI,RM,VT</value>
        </filters>
        <filters>
            <field>LEAD.EMAIL</field>
            <operation>notEqual</operation>
        </filters>
        <label>Lead Lazio</label>
    </listViews>
    <listViews>
        <fullName>Lead_del_giorno</fullName>
        <columns>Origine__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Aurora__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Lead del giorno</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>Tutti_i_lead_SG</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.LAST_NAME</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>Business_Unit__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>SG</value>
        </filters>
        <label>Tutti i lead SG</label>
    </listViews>
    <listViews>
        <fullName>Tutti_i_lead_SS</fullName>
        <columns>Origine__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>Business_Unit__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>SS</value>
        </filters>
        <label>Tutti i lead SS</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Convalida</fullName>
        <active>false</active>
        <errorConditionFormula>AND(Owner:User.Id &lt;&gt; $User.Id, $UserRole.Id = &quot;00e58000000cwWV&quot; )</errorConditionFormula>
        <errorDisplayField>OwnerId</errorDisplayField>
        <errorMessage>Non puoi riassegnare</errorMessage>
    </validationRules>
</CustomObject>